--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,13 @@
     "presets": [
         [
             "@babel/preset-env",
-                {
-                    "targets": {
-                    "ie": 11
-                }
+            {
+                "targets": { "ie": 11 },
+                "useBuiltIns": "usage"
             }
         ]
+    ],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties"
     ]
 }
