--- a/package.json
+++ b/package.json
@@ -18,15 +18,6 @@
     "url": "https://github.com/AngryIvan/fc-homework-1/issues"
   },
   "homepage": "https://github.com/AngryIvan/fc-homework-1#readme",
-  "dependencies": {
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "script-loader": "^0.7.2",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.1.4"
-  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -34,6 +25,13 @@
     "@babel/preset-env": "^7.6.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "script-loader": "^0.7.2",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.1.4"
   }
 }
